chrome_features: Set Usbguard feature flag to disabled by default.

This needs to be enabled by Finch instead of disabled by finch.
This in principle reverts but revision exceptions were blocking the merge:
https://chromium-review.googlesource.com/1176475

BUG=chromium:889118

Change-Id: I401312d32188ff6a0fd97b7fe8838b4371521b95
Reviewed-on: https://chromium-review.googlesource.com/c/1288709
Commit-Queue: Allen Webb <allenwebb@google.com>
Reviewed-by: Mattias Nissler <mnissler@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#600780}(cherry picked from commit 0a766a22e3ef0f98ddb31984bc0b3d0399ed5067 [formerly 6ef2e17aadaad1ecdf9055f645f885b16fce85d9])
Reviewed-on: https://chromium-review.googlesource.com/c/1288901
Cr-Commit-Position: refs/branch-heads/3538@{#1014}
Cr-Branched-From: 57781ff9a8651bc653184f680b0a4d8b92b6971f [formerly 79f7c91a2b2a2932cd447fa6f865cb6662fa8fa6]-refs/heads/master@{#587811}
Former-commit-id: 3e2f943fe1f766fb621d37ff92c75064facb557b